Melina/Grammar
program = suite*
suite = "suite" arguments* STRING ":" scenario* "end"
arguments = "arguments" argument* :  "end"
argument = STRING ":" STRING
scenario = "scenario" STRING ":" step* "end"
step = action STRING
action = "open" | "tap" | "expect"
